--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 # --- Web Framework ---
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-python-multipart==0.0.20
+fastapi
+uvicorn[standard]
+python-multipart
 
 # --- Templates / PDFs ---
-jinja2==3.1.6
-weasyprint==62.3
-striprtf==0.0.29
+jinja2
+weasyprint
+striprtf
 
-# --- LangChain (Versionen aufeinander abgestimmt) ---
-langchain==0.2.13
-langchain-community==0.2.13
-langchain-openai==0.3.33
-langchain-ollama==0.3.8
-langchain-huggingface==0.3.1
-langchain-chroma==0.2.6
+# --- LangChain-Ökosystem (ohne direktes 'langchain'!)
+langchain-community
+langchain-openai
+langchain-ollama
+langchain-huggingface
+langchain-chroma
 
-# --- Vektor-DB / Embeddings ---
-chromadb==1.0.21
-sentence-transformers==5.1.0
-openai==1.107.2
+# --- Vektor-DB / Embeddings / API ---
+chromadb
+sentence-transformers
+openai
