--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -33,6 +33,6 @@ jobs:
 
       - name: Run backend health check
         run: |
-          uvicorn app:app --host 0.0.0.0 --port 8000 &
+          uvicorn main:app --host 0.0.0.0 --port 8000 &
           sleep 5
-          curl -f http://127.0.0.1:8000/health
+          curl -f http://127.0.0.1:8000/api/health
