--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -26,6 +26,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run backend health check
+        env:
+          SKIP_LLM_SETUP: "1"
         run: |
           uvicorn main:app --host 0.0.0.0 --port 8000 &
           sleep 5
