--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
 # --- Web Framework ---
-fastapi
-uvicorn[standard]
-python-multipart
+fastapi>=0.111.0,<1.0
+uvicorn[standard]>=0.30.0,<1.0
+python-multipart>=0.0.9,<1.0
 
 # --- Templates / PDFs ---
-jinja2
-weasyprint
-striprtf
+jinja2>=3.1.4,<4.0
+weasyprint>=61.2,<62.0
+striprtf>=0.0.24,<0.1
 
 # --- LangChain-Ökosystem (ohne direktes 'langchain'!)
-langchain-community
-langchain-openai
-langchain-ollama
-langchain-huggingface
-langchain-chroma
+langchain-community>=0.2.0,<0.3
+langchain-openai>=0.1.8,<0.2
+langchain-ollama>=0.1.3,<0.4
+langchain-huggingface>=0.0.3,<0.1
+docarray>=0.40.0,<0.41
 
 # --- Vektor-DB / Embeddings / API ---
-chromadb
-sentence-transformers
-openai
+sentence-transformers>=3.0.1,<4.0
+openai>=1.35.10,<2.0
