changes for smoke test 2

--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -23,12 +23,24 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir -r requirements.txt
 
       - name: Run backend health check
         env:
           SKIP_LLM_SETUP: "1"
         run: |
-          uvicorn main:app --host 0.0.0.0 --port 8000 &
-          sleep 5
-          curl -f http://127.0.0.1:8000/api/health
+          uvicorn main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
+          APP_PID=$!
+          for attempt in {1..15}; do
+            if curl -fs http://127.0.0.1:8000/api/health > /dev/null; then
+              echo "Health check passed on attempt $attempt"
+              kill $APP_PID
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "Health endpoint did not respond in time"
+          cat uvicorn.log || true
+          kill $APP_PID || true
+          exit 1
