changes for testing workflow

--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Run backend health check
         env:
           SKIP_LLM_SETUP: "1"
-        env:
-          SKIP_LLM_SETUP: "1"
-        run: |
+        run: 
           set -euo pipefail
           uvicorn main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
           APP_PID=$!
