--- a/.github/workflows/pr-policy.yml
+++ b/.github/workflows/pr-policy.yml
@@ -32,6 +32,7 @@ permissions:
 jobs:
   enforce:
     name: Evaluate PR readiness
+    if: ${{ false }}  # temporarily disabled
     runs-on: ubuntu-latest
     steps:
       - name: Evaluate policy
