--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi jinja2 pytest
+          pip install fastapi jinja2 pytest httpx
 
       - name: Run smoke tests
         run: pytest backend/testing/test_smoke.py
