fix: sync langchain ecosystem versions (0.3.x compatible)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,10 +11,10 @@ striprtf>=0.0.24,<0.1
 # -- PDF Rendering stack pins --
 pydyf>=0.9,<0.11  # 0.11+ bricht WeasyPrint 61 wegen neuer __init__-Signatur
 
-# --- LangChain-Ökosystem (ohne direktes 'langchain'!)
+# --- LangChain-Ökosystem
 langchain>=0.3.0,<0.4
-langchain-community>=0.2.0,<0.3
-langchain-openai>=0.1.8,<0.2
+langchain-community>=0.3.0,<0.4
+langchain-openai>=0.2.0,<0.3
 docarray>=0.40.0,<0.41
 
 # --- Vektor-DB / Embeddings / API ---
