--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ pydyf>=0.9,<0.11  # 0.11+ bricht WeasyPrint 61 wegen neuer __init__-Signatur
 langchain>=0.3.0,<0.4
 langchain-community>=0.3.0,<0.4
 langchain-openai>=0.2.0,<0.3
+langchain-huggingface>=0.1.0,<0.2
 docarray>=0.40.0,<0.41
 
 # --- Vektor-DB / Embeddings / API ---
